--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 # TODO
 
-- simplify the data returned by the scrapers, no need for both future & past
+- simplify the data returned by the scrapers, no need for both future & past ✓
 - clean up data format, rename json to url perhaps?
 - fix dark mode - note plus, arrow-left icon colors are likely to break
 - add country, city specific pages, e.g. techtrib.es/fi/helsinki 
